--- a/cliente/pages/search-page.html
+++ b/cliente/pages/search-page.html
@@ -264,7 +264,7 @@
           </section>
             
           <section id="sectionAds" content layout vertical center>
-            <show-ads></show-ads>
+            <show-show-publishment></show-show-publishment>
           </section>
           
         </core-pages>
