--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-        <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
+    <link rel="import" href="bower_components/polymer/polymer.html">
+    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">  
+    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">  
+    <link rel="import" href="bower_components/core-menu/core-menu.html">  
+    <link rel="import" href="bower_components/paper-item/paper-item.html">  
+    <link rel="import" href="bower_components/core-icon-button/core-icon-button.html">  
+    <link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html">  
+    <link rel="import" href="bower_components/core-animated-pages/transitions/slide-from-right.html"> 
+    <link rel="import" href="bower_components/paper-input/paper-input.html">
+    <link rel="import" href="bower_components/paper-button/paper-button.html">
+    <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import" href="bower_components/core-a11y-keys/core-a11y-keys.html"> 
+    <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="bower_components/core-menu/core-submenu.html">
+    <link rel="import" href="bower_components/core-item/core-item.html">
+    <link rel="import" href="bower_components/core-pages/core-pages.html">
+    <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
+    <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+    <link rel="import" href="bower_components/core-icons/social-icons.html">
+    <link rel="import" href="bower_components/core-icons/communication-icons.html">
+    <link rel="import" href="bower_components/core-transition/core-transition-css.html">
+    <link rel="import" href="bower_components/paper-dropdown/paper-dropdown.html">
+    <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
+    <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
+    <link rel="import" href="bower_components/paper-toast/paper-toast.html">
+    <link rel="import" href="bower_components/core-pages/core-pages.html">
 
-        <link rel="import" href="bower_components/polymer/polymer.html">
-        <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">  
-        <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">  
-        <link rel="import" href="bower_components/core-menu/core-menu.html">  
-        <link rel="import" href="bower_components/paper-item/paper-item.html">  
-        <link rel="import" href="bower_components/core-icon-button/core-icon-button.html">  
-        <link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html">  
-        <link rel="import" href="bower_components/core-animated-pages/transitions/slide-from-right.html"> 
-        <link rel="import" href="bower_components/paper-input/paper-input.html">
-        <link rel="import" href="bower_components/paper-button/paper-button.html">
-        <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
-        <link rel="import" href="bower_components/core-a11y-keys/core-a11y-keys.html"> 
-        <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
-        <link rel="import" href="bower_components/core-menu/core-submenu.html">
-        <link rel="import" href="bower_components/core-item/core-item.html">
-        <link rel="import" href="bower_components/core-pages/core-pages.html">
-        <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
-        <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-        <link rel="import" href="bower_components/core-icons/social-icons.html">
-        <link rel="import" href="bower_components/core-icons/communication-icons.html">
-        <link rel="import" href="bower_components/core-transition/core-transition-css.html">
-        <link rel="import" href="bower_components/paper-dropdown/paper-dropdown.html">
-        <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
-        <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
-        <link rel="import" href="bower_components/paper-toast/paper-toast.html">
-        <link rel="import" href="bower_components/core-pages/core-pages.html">
+    <link rel="import" href="./elements/using-api.html">
+    <link rel="import" href="./elements/user-model.html">
+    <link rel="import" href="./elements/proposal-model.html">
+    <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
 
-        <link rel="import" href="./elements/using-api.html">
-        <link rel="import" href="./elements/user-model.html">
-        <link rel="import" href="./elements/proposal-model.html">
-        <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
+    <link rel="import" href="pages/main-page.html"> 
+    <link rel="import" href="pages/products-container.html"> 
+    <link rel="import" href="pages/second-page.html">
+    <link rel="import" href="pages/search-page.html">
+    <link rel="import" href="pages/profile-page.html">
+    <link rel="import" href="pages/announcement-page.html">
+    <link rel="import" href="pages/show-publishment.html">
+    <link rel="import" href="main-menu.html">
 
-        <link rel="import" href="pages/main-page.html"> 
-        <link rel="import" href="pages/products-container.html"> 
-        <link rel="import" href="pages/second-page.html">
-        <link rel="import" href="pages/search-page.html">
-        <link rel="import" href="pages/profile-page.html">
-        <link rel="import" href="pages/announcement-page.html">
-        <link rel="import" href="pages/show-publishment.html">
-        <link rel="import" href="main-menu.html">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 
-        
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-
-    </head>
-    <body unresolved fullbleed>
-    <main-menu></main-menu>
+</head>
+<body unresolved fullbleed>
+  <main-menu></main-menu>
 </body>
 </html> 
