--- a/cliente/pages/products-container.html
+++ b/cliente/pages/products-container.html
@@ -21,7 +21,7 @@
         <using-api id="usingApi"></using-api>
    
             <core-card id="core_card" layout vertical center>
-                <core-input readonly  name="user" value="" id="text"></core-input>
+                <core-input readonly  value="" id="text"></core-input>
                 <div id="imgContainer">   
                     <a id="a" href=""><img id ="img" src="" ></a>
                 </div>
