--- a/cliente/pages/show-publishment.html
+++ b/cliente/pages/show-publishment.html
@@ -4,7 +4,6 @@
       :host{
       }
       #container{
-        background-color: rgba(255, 255, 255, 0.1);
         width: 100%;
         height: 300px;
       }
@@ -13,7 +12,7 @@
         height: 200px;
         border: solid 1px rgba(255, 255, 255, 0.4);
         background-color: rgba(255, 255, 255, 0.5);
-        padding: 10px;
+        padding: 20px;
         margin-top: 25px;
       }
       #email{
@@ -48,16 +47,16 @@
         background: -ms-linear-gradient(top, #3e779d, #65a9d7);
         background: -o-linear-gradient(top, #3e779d, #65a9d7);
         padding: 5px 10px;
-        -webkit-border-radius: 8px;
-        -moz-border-radius: 8px;
-        border-radius: 8px;
+        -webkit-border-radius: 15px;
+        -moz-border-radius: 15px;
+        border-radius: 15px;
         -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
         -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
         box-shadow: rgba(0,0,0,1) 0 1px 0;
         text-shadow: rgba(0,0,0,.4) 0 1px 0;
         color: white;
         font-size: 14px;
-        font-family: Georgia, serif;
+        font-family: sans-serif;
         text-decoration: none;
         vertical-align: middle;
         text-align: center;
@@ -65,12 +64,12 @@
       }
       .button:hover {
         border-top-color: #28597a;
-        background: #28597a;
+        background: #054370;
         color: #ccc;
       }
       .button:active {
         border-top-color: #1b435e;
-        background: #1b435e;
+        background: #023254;
       }
       button-container{
         width: 95%;
