--- a/cliente/main-menu.html
+++ b/cliente/main-menu.html
@@ -65,6 +65,7 @@
 
   <script>
     var logName;
+    window.localStorage.setItem("->","mis cojones");
     Polymer({
       ready: function () {
         this.pages = [
