--- a/cliente/elements/user-model.html
+++ b/cliente/elements/user-model.html
@@ -1,66 +1,70 @@
 <link rel = "import" href = "../bower_components/polymer/polymer.html" >
 <polymer-element name = "user-model">
-    <template>
-    </template>
-    <script>
-         
-        (function () {
-            var base = '/user';
-            /* function defaultAjaxErrorHandler(xhr, err, desc) {
-             console.log(xhr, err, desc);
-             var errorToast = document.querySelector('#errorToast');
-             errorToast.text = '[' +xhr.status + '] ' + desc + ': ' + xhr.response;
-             errorToast.show();
-             }
-             */
-            function doAjax(options, success, error) {
-                options.type = options.type || 'GET';
-                options.url = base + (options.url || '');
-                options.dataType = options.dataType || 'json';
-                options.contentType = options.contentType || 'application/json; charset=UTF-8';
-                options.success = success;
-                options.error = (typeof error === 'function') ? error : defaultAjaxErrorHandler;
-                $.ajax(options);
-            }
-            Polymer('user-model', {
-                saveUser: function (user) {
-                    var that = this;
-                    doAjax({type: 'POST', data: user}, function (result) {
-                        that.res = true;
-                    }, function () {
-                        that.res = false;
-                    });
-                    return that.res;
-                },
-                searchUser: function (username) {
-                    var that = this;
-                    doAjax({type: 'GET', url: '/' + username}, function (result) {
-                        that.res = false;
-                    }, function (error) {
-                        that.res = true;
-                    });
-                    return that.res;
-                },
-                verifyUser: function (user, callback) {
-                    doAjax({type: 'GET', url: '/verify/' + user.username + '/' + user.passwd}, function (result) {
-                       callback(result);
-                    }, function (error) {
-                       callback();
-                    });
-                },
-                refresh: function (user) {
-                    doAjax({type: 'PUT', data:user}, function (result) {
-                    }, function (error) {
-                    });
-                },
-                deleteUser:function(user,callback){
-                    doAjax({type: 'DELETE', url: '/'+user}, function (result) {
-                        callback(result);
-                    }, function (error) {
-                       console.log("ERROR DELETE USER");
-                    });
-                }
-            });
-        }());
-    </script>
+  <template>
+  </template>
+  <script>
+
+    (function () {
+      var base = '/user';
+      /* function defaultAjaxErrorHandler(xhr, err, desc) {
+       console.log(xhr, err, desc);
+       var errorToast = document.querySelector('#errorToast');
+       errorToast.text = '[' +xhr.status + '] ' + desc + ': ' + xhr.response;
+       errorToast.show();
+       }
+       */
+      function doAjax(options, success, error) {
+        options.type = options.type || 'GET';
+        options.url = base + (options.url || '');
+        options.dataType = options.dataType || 'json';
+        options.contentType = options.contentType || 'application/json; charset=UTF-8';
+        options.success = success;
+        options.error = (typeof error === 'function') ? error : defaultAjaxErrorHandler;
+        $.ajax(options);
+      }
+      Polymer('user-model', {
+        saveUser: function (user, callback) {
+          var that = this;
+          doAjax({type: 'POST', data: user}, function (result) {
+            callback(result);
+          }, function (error) {
+            callback();
+          });
+        },
+        searchUser: function (username, callback) {
+          doAjax({type: 'GET', url: '/' + username}, function (result) {
+            callback(result);
+          }, function () {
+            callback();
+          });
+        },
+        verifyUser: function (user, callback) {
+          doAjax({type: 'GET', url: '/verify/' + user.username + '/' + user.passwd}, function (result, token) {
+            callback(result, token);
+          }, function (error) {
+            callback();
+          });
+        },
+        refresh: function (user) {
+          doAjax({type: 'PUT', data: user}, function (result) {
+          }, function (error) {
+          });
+        },
+        deleteUser: function (user, callback) {
+          doAjax({type: 'DELETE', url: '/' + user}, function (result) {
+            callback(result);
+          }, function (error) {
+            console.log("ERROR DELETE USER");
+          });
+        },
+        verifyToken: function (token, callback) {
+          doAjax({type: 'POST', url: '/token/', data: token}, function (result) {
+            callback(result);
+          }, function (error) {
+            console.log("NOT HAVE PERMISSIONS TO ENTER");
+          });
+        }
+      });
+    }());
+  </script>
 </polymer-element>
