--- a/cliente/index.html
+++ b/cliente/index.html
@@ -39,9 +39,9 @@
     <link rel="import" href="./elements/proposal-model.html">
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
 
-    <link rel="import" href="pages/main-page.html"> 
+    <link rel="import" href="pages/signin-page.html"> 
     <link rel="import" href="pages/products-container.html"> 
-    <link rel="import" href="pages/second-page.html">
+    <link rel="import" href="pages/signup-page.html">
     <link rel="import" href="pages/search-page.html">
     <link rel="import" href="pages/profile-page.html">
     <link rel="import" href="pages/announcement-page.html">
