--- a/cliente/pages/profile-page.html
+++ b/cliente/pages/profile-page.html
@@ -1,173 +1,173 @@
 <polymer-element name="profile-page">
-    <template>
-        <style>
-            :host{
-            }
-            #name{
-                height:15px;
-                font-family: sans-seri; 
-                text-shadow:  0.1em 0.1em #333;
-                color:#2d6e9a;
-                font-size: 130%;
-                margin-top: 20px;
-                font-weight: bold;
-            }
-            core-input#name /deep/ input{
-                text-align:center;
-            }
-            #emailFixed{
-                height:15px;
-                font-family: sans-seri; 
-                text-shadow:  0.1em 0.1em #333;
-                color:#2d6e9a;
-                font-size: 120%;
-                margin-top: 22px;
-                font-weight: bold;
+  <template>
+    <style>
+      :host{
+      }
+      #name{
+        height:15px;
+        font-family: sans-seri; 
+        text-shadow:  0.1em 0.1em #333;
+        color:#2d6e9a;
+        font-size: 130%;
+        margin-top: 20px;
+        font-weight: bold;
+      }
+      core-input#name /deep/ input{
+        text-align:center;
+      }
+      #emailFixed{
+        height:15px;
+        font-family: sans-seri; 
+        text-shadow:  0.1em 0.1em #333;
+        color:#2d6e9a;
+        font-size: 120%;
+        margin-top: 22px;
+        font-weight: bold;
 
-            }
-            core-input#emailFixed /deep/ input{
-                text-align:center;
-            }
-            #email{
-                height:15px;
-                font-family: sans-seri; 
-                text-shadow:  0.1em 0.1em #333;
-                color:#2d6e9a;
-                font-size: 120%;
-                margin-top: 15px;
-                font-weight: bold;
-            }
-            core-input#email /deep/ input{
-                text-align:center;
-            }
-            img{
-                margin-top: 10px;
-                width: 40%;
-                height: 50%;
-            }
-            #enter{
-                margin-top: 15px;
-                height: 30px;
-                color:#2d6e9a;
-                width: 50%;
-                text-transform: none;
-                font-size:17px;
+      }
+      core-input#emailFixed /deep/ input{
+        text-align:center;
+      }
+      #email{
+        height:15px;
+        font-family: sans-seri; 
+        text-shadow:  0.1em 0.1em #333;
+        color:#2d6e9a;
+        font-size: 120%;
+        margin-top: 15px;
+        font-weight: bold;
+      }
+      core-input#email /deep/ input{
+        text-align:center;
+      }
+      img{
+        margin-top: 10px;
+        width: 40%;
+        height: 50%;
+      }
+      #enter{
+        margin-top: 15px;
+        height: 30px;
+        color:#2d6e9a;
+        width: 50%;
+        text-transform: none;
+        font-size:17px;
 
-            }
-            :host{
-                box-sizing: none;
-            }
-            paper-button#enter /deep/ #ink{
-                color: #4db0cf;
-            }
-            #newMail{
-                height: 50px;
-                width: 200px;
-                visibility:hidden;
+      }
+      :host{
+        box-sizing: none;
+      }
+      paper-button#enter /deep/ #ink{
+        color: #4db0cf;
+      }
+      #newMail{
+        height: 50px;
+        width: 200px;
+        visibility:hidden;
 
-            }
-            #enter2{
-                visibility:hidden; 
-                height: 30px;
-                color:#2d6e9a;
-                width: 20%;
-                text-transform: none;
-                font-size:17px;
-            }
-            p1{
-                color:blue;
-                margin-left:245px;
-            }
+      }
+      #enter2{
+        visibility:hidden; 
+        height: 30px;
+        color:#2d6e9a;
+        width: 20%;
+        text-transform: none;
+        font-size:17px;
+      }
+      p1{
+        color:blue;
+        margin-left:245px;
+      }
 
-            #delete{
-                margin-left: 80%;
-                width: 40px;
-                height: 40px;
-            }
-            #delete:hover{
-                color: #3f7eaa;
-            }
-            #done{
-                width:25px;
-                height: 25px;
-            }
-            #cancel{
-                width: 25px;
-                height: 25px;
+      #delete{
+        margin-left: 80%;
+        width: 40px;
+        height: 40px;
+      }
+      #delete:hover{
+        color: #3f7eaa;
+      }
+      #done{
+        width:25px;
+        height: 25px;
+      }
+      #cancel{
+        width: 25px;
+        height: 25px;
 
-            }
-            #done:hover{
-                color: green;
-                width: 26px;
-                height: 26px;
-            }
-            #cancel:hover{
-                color: red;
-                width: 26px;
-                height: 26px;
-            }
-
-
+      }
+      #done:hover{
+        color: green;
+        width: 26px;
+        height: 26px;
+      }
+      #cancel:hover{
+        color: red;
+        width: 26px;
+        height: 26px;
+      }
 
 
-        </style>
-        <user-model id="userModel"></user-model>
 
-        <core-card  layout vertical center fit>
-            <p on-click="{{saveUserValues}}">PROFILE</p>
-            <core-input readonly  name="user" value="Default" id="name"></core-input>
-            <core-input readonly  name="user" value="E-MAIL: " id="emailFixed"></core-input>
-            <core-input readonly  name="user" value="default@default.com" id="email"></core-input>
-            <core-icon  id ="enter" icon="mail" on-click="{{ keypressHandler }}" ></core-icon>
-            <div layout horizontal center>
-                <paper-input label="New email..." id="newMail" ></paper-input>
-                <core-icon icon="done" id ="enter2" on-click="{{refreshEmail}}" ></core-icon>
-            </div>
-            <img src="../img/person.jpg">
-            <core-icon icon="delete" id="delete" on-click="{{warning}}"></core-icon>
-        </core-card>
 
-    </template>
-    <script>
-        function hidden() {
-            var hidden = document.querySelector('main-menu').shadowRoot.querySelector('#core_card');
-            hidden.style.height = "100%";
+    </style>
+    <user-model id="userModel"></user-model>
+
+    <core-card  layout vertical center fit>
+      <p on-click="{{saveUserValues}}">PROFILE</p>
+      <core-input readonly  name="user" value="Default" id="name"></core-input>
+      <core-input readonly  name="user" value="E-MAIL: " id="emailFixed"></core-input>
+      <core-input readonly  name="user" value="default@default.com" id="email"></core-input>
+      <core-icon  id ="enter" icon="mail" on-click="{{ keypressHandler }}" ></core-icon>
+      <div layout horizontal center>
+        <paper-input label="New email..." id="newMail" ></paper-input>
+        <core-icon icon="done" id ="enter2" on-click="{{refreshEmail}}" ></core-icon>
+      </div>
+      <img src="../img/person.jpg">
+      <core-icon icon="delete" id="delete" on-click="{{warning}}"></core-icon>
+    </core-card>
+
+  </template>
+  <script>
+    Polymer({
+      saveUserValues: function () {
+        this.$.name.value = localStorage.getItem('userName');
+        this.$.email.value = localStorage.getItem('mail');
+      },
+      keypressHandler: function () {
+        this.$.enter2.style.visibility == "visible" ? this.$.enter2.style.visibility = "hidden" : this.$.enter2.style.visibility = "visible"
+        this.$.newMail.style.visibility == "visible" ? this.$.newMail.style.visibility = "hidden" : this.$.newMail.style.visibility = "visible"
+      },
+      refreshEmail: function (event, detail, sender) {
+        if (this.validateEmail()) {
+          this.$.userModel.verifyToken(localStorage.getItem('token'), function (result) {
+            var user = {
+              username: localStorage.getItem('userName'),
+              email: this.$.newMail.value
+            }
+            this.$.userModel.refresh(JSON.stringify(user));
+            localStorage.setItem("mail", this.$.newMail.value);
+            this.$.enter2.style.visibility = "hidden";
+            this.$.newMail.style.visibility = "hidden";
+            this.$.email.value = this.$.newMail.value;
+            this.$.newMail.value = "";
+          })
+        } else {
+          this.$.newMail.value = "";
+          this.$.newMail.label = "Invalid e-mail";
         }
-        Polymer({
-            saveUserValues: function () {
-                this.$.name.value = logName.username;
-                this.$.email.value = logName.email;
-            },
-            keypressHandler: function () {
-                this.$.enter2.style.visibility = "visible";
-                this.$.newMail.style.visibility = "visible";
-            },
-            refreshEmail: function (event, detail, sender) {
-                if (this.validateEmail()) {
-                    var user = {
-                        username: logName.username,
-                        email: this.$.newMail.value
-                    }
-                    this.$.userModel.refresh(JSON.stringify(user));
-                    this.$.enter2.style.visibility = "hidden";
-                    this.$.newMail.style.visibility = "hidden";
-                    this.$.email.value = this.$.newMail.value;
-                    this.$.newMail.value = "";
-                } else {
-                    this.$.newMail.value = "";
-                    this.$.newMail.label = "Invalid e-mail";
-                }
-            },
-            validateEmail: function () {
-                var string = this.$.newMail.value;
-                return this.validateField(string, /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
-            },
-            validateField: function (string, pattern) {
-                return string.match(pattern) !== null;
-            },
-            warning: function () {
-                this.fire('dialog');
-            }
-        });
-    </script>
+
+      },
+      validateEmail: function () {
+        var string = this.$.newMail.value;
+        return this.validateField(string, /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
+      },
+      validateField: function (string, pattern) {
+        return string.match(pattern) !== null;
+      },
+      warning: function () {
+        this.fire('dialog');
+      }
+    });
+  </script>
 </polymer-element>
