show-MyPublishment add, add favorite button in the publishment, finished delete account

--- a/cliente/elements/proposal-model.html
+++ b/cliente/elements/proposal-model.html
@@ -36,6 +36,13 @@
           }, function (error) {
             callback();
           });
+        },
+        getMyPublishment: function (username, callback) {
+          doAjax({type: 'GET', url: "/ownPublishment/"+username}, function (result) {
+            callback(result);
+          }, function (error) {
+            callback();
+          });
         }
       });
     }());
