--- a/cliente/index.html
+++ b/cliente/index.html
@@ -46,6 +46,7 @@
     <link rel="import" href="pages/profile-page.html">
     <link rel="import" href="pages/announcement-page.html">
     <link rel="import" href="pages/show-publishment.html">
+    <link rel="import" href="pages/show-myPublishment.html">
     <link rel="import" href="main-menu.html">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
