--- a/cliente/pages/show-myPublishment.html
+++ b/cliente/pages/show-myPublishment.html
@@ -11,7 +11,7 @@
         width: 95%;
         height: 200px;
         border: solid 1px rgba(255, 255, 255, 0.4);
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(4, 58, 96,0.4);
         padding: 15px 20px 15px 20px;
         margin-top: 25px;
       }
@@ -37,6 +37,9 @@
       date{
         margin-right: 46.5%;
         float: right;
+      }
+      #delete:hover{
+        color: white;
       }
       .button {
         border-top: 1px solid #96d1f8;
@@ -95,7 +98,7 @@
         <div id="content">
           <core-item id="paper_item">
             <div id='name_ads'>{{ ad.username }}</div>  
-            <core-icon on-click="{{ deletePublishment }}" icon="delete" alt="{{ad._id}}" id="favorite" style="color: black;"></core-icon>
+            <core-icon on-click="{{ deletePublishment }}" icon="delete" alt="{{ad._id}}" id="delete"></core-icon>
           </core-item><hr id="lineName"/> {{ ad.content }}
         </div>
         <div id="email"> Contact e-mail: {{ad.mail}} <date> {{ad.date}} </date></div>
@@ -113,6 +116,10 @@
         socket.on('AdPublished', function (result) {
           that.$.button.style.visibility = "visible";
         });
+        socket.on('AdDeleted', function (result) {
+          that.loadAds();
+        });
+        
       },
       loadAds: function () {
         var that = this;
