--- a/cliente/pages/show-publishment.html
+++ b/cliente/pages/show-publishment.html
@@ -11,7 +11,7 @@
         width: 95%;
         height: 200px;
         border: solid 1px rgba(255, 255, 255, 0.4);
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(4, 58, 96,0.4);
         padding: 15px 20px 15px 20px;
         margin-top: 25px;
       }
@@ -122,7 +122,7 @@
         this.$.toast1.show();
       },
       addFavorites: function (event, detail, sender) {
-        sender.style.color == "black" ? sender.style.color = "red" : sender.style.color = "black";
+        sender.style.color == "black" ? sender.style.color = "indianred" : sender.style.color = "black";
         if (sender.style.color == red) {
           
         }
